--- a/fabric-network/manifests/absa/absa-peer2.yaml
+++ b/fabric-network/manifests/absa/absa-peer2.yaml
@@ -8,7 +8,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: absa-peer2-tls-cert
-  namespace: ${absa_NS}
+  namespace: ${ABSA_NS}
 spec:
   isCA: false
   privateKey:
@@ -18,7 +18,7 @@ spec:
     - localhost
     - absa-peer2
     - absa-peer-gateway-svc
-    - absa-peer2.${absa_NS}.svc.cluster.local
+    - absa-peer2.${ABSA_NS}.svc.cluster.local
     - absa-peer2.${DOMAIN}
     - absa-peer2-gateway-svc.${DOMAIN}
   ipAddresses:
@@ -47,7 +47,7 @@ data:
   CORE_PEER_CHAINCODELISTENADDRESS: 0.0.0.0:7052
   # bootstrap peer is the other peer in the same org
   CORE_PEER_GOSSIP_BOOTSTRAP: absa-peer1:7051
-  CORE_PEER_GOSSIP_EXTERNALENDPOINT: absa-peer2.${absa_NS}.svc.cluster.local:7051
+  CORE_PEER_GOSSIP_EXTERNALENDPOINT: absa-peer2.${ABSA_NS}.svc.cluster.local:7051
   CORE_PEER_LOCALMSPID: absaMSP
   CORE_PEER_MSPCONFIGPATH: /var/hyperledger/fabric/organizations/peerOrganizations/absa.example.com/peers/absa-peer2.absa.example.com/msp
   CORE_OPERATIONS_LISTENADDRESS: 0.0.0.0:9443
