--- a/fabric-network/manifests/crossborder/crossborder-peer1.yaml
+++ b/fabric-network/manifests/crossborder/crossborder-peer1.yaml
@@ -8,7 +8,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: crossborder-peer1-tls-cert
-  namespace: ${crossborder_NS}
+  namespace: ${CROSSBORDER_NS}
 spec:
   isCA: false
   privateKey:
@@ -17,7 +17,7 @@ spec:
   dnsNames:
     - localhost
     - crossborder-peer1
-    - crossborder-peer1.${crossborder_NS}.svc.cluster.local
+    - crossborder-peer1.${CROSSBORDER_NS}.svc.cluster.local
     - crossborder-peer1.${DOMAIN}
     - crossborder-peer-gateway-svc
     - crossborder-peer-gateway-svc.${DOMAIN}
@@ -46,7 +46,7 @@ data:
   CORE_PEER_CHAINCODELISTENADDRESS: 0.0.0.0:7052
   # bootstrap peer is the other peer in the same org
   CORE_PEER_GOSSIP_BOOTSTRAP: crossborder-peer2:7051
-  CORE_PEER_GOSSIP_EXTERNALENDPOINT: crossborder-peer1.${crossborder_NS}.svc.cluster.local:7051
+  CORE_PEER_GOSSIP_EXTERNALENDPOINT: crossborder-peer1.${CROSSBORDER_NS}.svc.cluster.local:7051
   CORE_PEER_LOCALMSPID: crossborderMSP
   CORE_PEER_MSPCONFIGPATH: /var/hyperledger/fabric/organizations/peerOrganizations/crossborder.example.com/peers/crossborder-peer1.crossborder.example.com/msp
   CORE_OPERATIONS_LISTENADDRESS: 0.0.0.0:9443
